# pathsub

./: .gitignore  LICENSE  format.py  lint.py  pyproject.toml  readme.rst  setup.py  test.py
pathsub/: __init__.py  __main__.py  agents.py  cli.py  core.py  fs.py  plan.py
tests/: test_agents.py  test_cli.py  test_fs.py  utils_for_testing.py
