[tool.poetry]
name = "pathsub"
version = "0.0.5"
description = "Command-line utilities for performing find-replace operations on file paths."
license = "MIT"
authors = ["Jim Boswell <jimb@yellcorp.org>"]
readme = "readme.rst"
repository = "https://github.com/yellcorp/pathsub"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Utilities'
]

[tool.poetry.scripts]
submv = "pathsub.cli:call_main_and_exit"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.2"
mypy = "^1.10.0"

[tool.isort]
profile = "black"
order_by_type = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
